--- a/style.css
+++ b/style.css
@@ -1,9 +1,17 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Swanky+and+Moo+Moo&display=swap');
 
 *,
 *:after,
 *:before {
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 }
 
 
@@ -31,11 +39,20 @@ h2 {
 
 
 header {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	align-items: center;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	height: 100vh;
-	justify-content: space-between;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 	margin-bottom: 150px;
 }
 
@@ -68,29 +85,45 @@ header {
 }
 
 .header__mySocialWrapper {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: space-around;
+	-ms-flex-pack: distribute;
+	    justify-content: space-around;
 	width: 1000px;
 }
 
 /*Skills*/
 
 .skills {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: space-around;
+	-ms-flex-pack: distribute;
+	    justify-content: space-around;
 	
 }
 
 .skills__hard {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
 	
 	text-align: center;
 }
 
 .skills__soft {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
 	
 	text-align: center;
 }
@@ -123,12 +156,324 @@ a.projects-link {
 /*Animation*/
 
 .my_position {
-	animation: my_position 3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	-webkit-animation: my_position 3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: my_position 3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 	;
 }
 
 .my_name {
-	animation: my_name 3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	-webkit-animation: my_name 3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: my_name 3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+@-webkit-keyframes my_position {
+	0% {
+		letter-spacing: -0.5em;
+		-webkit-transform: translateZ(-800px);
+		transform: translateZ(-800px);
+		-webkit-filter: blur(12px);
+		filter: blur(12px);
+		opacity: 0;
+	}
+
+	100% {
+		-webkit-transform: translateZ(0);
+		transform: translateZ(0);
+		-webkit-filter: blur(0);
+		filter: blur(0);
+		opacity: 1;
+	}
+}
+
+@keyframes my_position {
+	0% {
+		letter-spacing: -0.5em;
+		-webkit-transform: translateZ(-800px);
+		transform: translateZ(-800px);
+		-webkit-filter: blur(12px);
+		filter: blur(12px);
+		opacity: 0;
+	}
+
+	100% {
+		-webkit-transform: translateZ(0);
+		transform: translateZ(0);
+		-webkit-filter: blur(0);
+		filter: blur(0);
+		opacity: 1;
+	}
+}
+
+@-webkit-keyframes my_name {
+	0% {
+		letter-spacing: -0.5em;
+		-webkit-transform: translateZ(-800px);
+		transform: translateZ(-800px);
+		-webkit-filter: blur(12px);
+		filter: blur(12px);
+		opacity: 0;
+	}
+
+	100% {
+		-webkit-transform: translateZ(0);
+		transform: translateZ(0);
+		-webkit-filter: blur(0);
+		filter: blur(0);
+		opacity: 1;
+	}
+}
+
+@keyframes my_name {
+	0% {
+		letter-spacing: -0.5em;
+		-webkit-transform: translateZ(-800px);
+		transform: translateZ(-800px);
+		-webkit-filter: blur(12px);
+		filter: blur(12px);
+		opacity: 0;
+	}
+
+	100% {
+		-webkit-transform: translateZ(0);
+		transform: translateZ(0);
+		-webkit-filter: blur(0);
+		filter: blur(0);
+		opacity: 1;
+	}
+}
+
+@media (max-width: 768px) {
+
+	header {
+		margin-bottom: 70px;
+	}
+
+	.container {
+		width: 100%;
+	}
+
+	.my_name {
+		font-size: 20px;
+		width: 100%;
+		height: 40px;
+
+	}
+
+	.my_position {
+		font-size: 18px;
+		width: 200px;
+		height: 30px;
+	}
+
+	.header__face {
+		height: 100px;
+		width: 100px;
+		margin: 0 auto;
+	}
+
+	.header__mySocialWrapper {
+		width: 200px;
+		height: 30px;
+	}
+
+	.header__mySocialWrapper img {
+		width: 30px;
+		height: 30px;
+	}
+
+	.skills {
+		width: 100%;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: column;
+		        flex-direction: column;
+		-webkit-box-align: center;
+		    -ms-flex-align: center;
+		        align-items: center;
+		-webkit-box-pack: center;
+		    -ms-flex-pack: center;
+		        justify-content: center;
+	}
+
+	.skills h2 {
+		font-size: 14px;
+	}
+
+	.skills li {
+		font-size: 14px;
+	}
+
+	.projects__title {
+		font-size: 14px;
+	}
+
+	a.projects-link {
+		font-size: 14px;
+	}
+}
+
+.jsProjects {
+	margin-top: 40px;
+}
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Swanky+and+Moo+Moo&display=swap');
+
+*,
+*:after,
+*:before {
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
+}
+
+
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	margin: 0;
+}
+
+.container {
+	width: 100%;
+	margin: 0 auto;
+
+}
+
+/* Header */
+h2 {
+	font-family: 'Kaushan Script', cursive;
+}
+
+
+
+header {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	height: 100vh;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	margin-bottom: 150px;
+}
+
+.header__face {
+	display: block;
+	width: 400px;
+	height: 400px;
+
+}
+
+.my_name {
+	margin-top: 20px;
+
+	display: block;
+	font-family: 'Swanky and Moo Moo', cursive;
+	font-size: 72px;
+	text-align: center;
+}
+
+.my_position {
+	display: block;
+	height: 60px;
+	font-family: 'Kaushan Script', cursive;
+	font-size: 40px;
+	text-align: center;
+}
+
+.header__mySocial {
+	display: block;
+}
+
+.header__mySocialWrapper {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-ms-flex-pack: distribute;
+	    justify-content: space-around;
+	width: 1000px;
+}
+
+/*Skills*/
+
+.skills {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-ms-flex-pack: distribute;
+	    justify-content: space-around;
+	
+}
+
+.skills__hard {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	
+	text-align: center;
+}
+
+.skills__soft {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	
+	text-align: center;
+}
+
+ul {
+	list-style: none;
+	font-family: 'Swanky and Moo Moo', cursive;
+	font-size: 30px;
+	text-align: center;
+}
+
+a.projects-link {
+	text-decoration: none;
+	font-family: 'Swanky and Moo Moo', cursive;
+	font-size: 30px;
+	padding-top: 10px;
+	color: black;
+	cursor: pointer;
+}
+
+.projects {
+	margin: 0 auto;
+	text-align: center;
+}
+
+.projects-link {
+	display: block;
+}
+
+/*Animation*/
+
+.my_position {
+	-webkit-animation: my_position 3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: my_position 3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	;
+}
+
+.my_name {
+	-webkit-animation: my_name 3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: my_name 3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
 @keyframes my_position {
@@ -210,9 +555,16 @@ a.projects-link {
 
 	.skills {
 		width: 100%;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: column;
+		        flex-direction: column;
+		-webkit-box-align: center;
+		    -ms-flex-align: center;
+		        align-items: center;
+		-webkit-box-pack: center;
+		    -ms-flex-pack: center;
+		        justify-content: center;
 	}
 
 	.skills h2 {
