--- a/howTo/page/bislite/css/style.css
+++ b/howTo/page/bislite/css/style.css
@@ -4,6 +4,9 @@ html {
 *,*::before, *::after {
     box-sizing: inherit;
 }
+body {
+    font-family: 'Lato', sans-serif;
+}
 
 a {
     color: #000;
@@ -27,6 +30,7 @@ li {
 }
 .header {
     background-color: #e8ebf1;
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.07);
 }
 .header__inner{
     display: flex;
@@ -37,7 +41,6 @@ li {
 .header__logo a {
     color: #2aacc8;
     font-size: 50px;
-    font-family: 'Lato', sans-serif;
     font-weight: 400;
 }
 .header__logo a span {
@@ -133,3 +136,26 @@ li {
     transition: all .3s;
 
 }
+
+/*slider*/
+
+.slider {
+    background-color: #81e4ed;
+    padding: 20px 0px 40px;
+}
+.slider__item {
+    background-image: url(../images/slider-bg.jpg);
+    min-height: 440px;
+    background-position: top center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.slider__item-title {
+    font-size: 50px;
+    color: #fff;
+    width: 300px;
+    margin-left: 60px;
+    font-weight: 700;
+    padding-top: 90px;
+}
+
