--- a/howTo/page/bislite/css/style.css
+++ b/howTo/page/bislite/css/style.css
@@ -7,6 +7,7 @@ html {
 body {
     font-family: 'Lato', sans-serif;
     line-height: 20px;
+    font-size: 15px;
 }
 
 a {
@@ -238,5 +239,31 @@ margin-bottom: 25px;
     top: 5px;
     width: 5px;
     height: 7px;
+}
+
+/*works*/
+
+.works__title{
+    padding: 25px 0px 15px 40px;
+    position: relative;
+    font-family: 'Arial', sans-serif;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.works__title::before{
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 20px;
+    background-image:url(../images/slider/cursor1.svg);
+    background-repeat: no-repeat;
+    width: 14px;
+    height: 24px;
+}
+.works__inner{
+    padding: 20px 0px 40px;
+    border-top: 1px solid #dfe1e5;
+    border-bottom: 1px solid #dfe1e5;
 }
 
