--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ header {
 	-webkit-box-align: center;
 	    -ms-flex-align: center;
 	        align-items: center;
-	height: 100vh;
+	
 	-webkit-box-pack: justify;
 	    -ms-flex-pack: justify;
 	        justify-content: space-between;
@@ -426,6 +426,7 @@ header {
 	text-align: center;
 }
 
+
 .skills__soft {
 	display: -webkit-box;
 	display: -ms-flexbox;
@@ -443,6 +444,7 @@ ul {
 	font-family: 'Swanky and Moo Moo', cursive;
 	font-size: 30px;
 	text-align: center;
+	padding: 0;
 }
 
 a.projects-link {
@@ -517,7 +519,8 @@ a.projects-link {
 @media (max-width: 768px) {
 
 	header {
-		margin-bottom: 70px;
+		margin-bottom: 50px;
+		justify-content:space-around;
 	}
 
 	.container {
@@ -525,16 +528,15 @@ a.projects-link {
 	}
 
 	.my_name {
-		font-size: 20px;
+		font-size: 42px;
 		width: 100%;
-		height: 40px;
+		
 
 	}
 
 	.my_position {
-		font-size: 18px;
+		font-size:24px;
 		width: 200px;
-		height: 30px;
 	}
 
 	.header__face {
