--- a/howTo/page/bislite/css/style.css
+++ b/howTo/page/bislite/css/style.css
@@ -243,7 +243,9 @@ margin-bottom: 25px;
 
 /*works*/
 
-.works__title{
+.works__title,
+.testimonials__title,
+.clients-logo__title{
     padding: 25px 0px 15px 40px;
     position: relative;
     font-family: 'Arial', sans-serif;
@@ -251,7 +253,9 @@ margin-bottom: 25px;
     text-transform: uppercase;
 }
 
-.works__title::before{
+.works__title::before,
+.testimonials__title::before,
+.clients-logo__title::before{
     content: '';
     position: absolute;
     left: 0;
@@ -318,3 +322,78 @@ margin-bottom: 25px;
     margin-right: -15px;
 }
 
+/*clients*/
+
+.clients{
+    padding: 0px 0px 40px;
+}
+.clients__inner{
+    display: flex;
+    justify-content: space-between;
+}
+.testimonials{
+    max-width: 440px;
+
+}
+.testimonials p {
+    font-size: 14px;
+    line-height: 24px;
+    color: #363636 ;
+    font-family: 'Arial', sans-serif;
+}
+.testimonials span{
+    display: block;
+    padding-top: 30px;
+    font-style: italic;
+    font-weight: 700;
+    font-family: 'Arial', sans-serif;
+}
+.testimonials__title::before{
+    background-image: url(../images/clients/testi.svg);
+    width: 24px;
+    height: 23px;
+}
+.clients-logo__title::before{
+    background-image: url(../images/clients/clients.svg);
+    width: 24px;
+    height: 23px;
+}
+
+.download{
+    margin-top: 40px;
+    padding: 30px 40px 30px 30px;
+    border: 1px solid #81e4ed;
+    background-color: #e8fcfe;
+    display: flex;
+    justify-content: space-between;
+
+}
+.download__text{
+    font-size: 16px;
+    line-height: 26px;
+    color: #363636;
+    max-width: 620px;
+}
+.download__btn a{
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 18px;
+    padding: 20px 20px 20px 70px;
+    position: relative;
+    border: 1px solid rgb(42, 172, 200);
+    border-radius: 8px;
+    box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.2),inset 0px 2px 1px 0px rgba(255, 255, 255, 0.1);
+    background: linear-gradient(to top, rgb(42,172,200) 0%, rgb(96,206,222) 15%, rgb(114,218,230) 50%, rgb(129,228,237) 100%);
+}
+.download__btn a::before{
+    content: '';
+    position: absolute;
+    background-image: url(../images/clients/download.svg);
+    width: 28px;
+    height: 25px;
+    top: 16px;
+    left: 19px;
+}
+
+
+  
