--- a/howTo/page/jetro/css/style.css
+++ b/howTo/page/jetro/css/style.css
@@ -59,17 +59,21 @@ a {
 
 /*slider*/
 
+.slider{
+    margin-bottom: 40px;
+}
+
 .slider__item {
-    min-height: 400px;
+    max-height: 400px;
     background-image: url(../images/slider_bg.jpg);
     background-position: top center;
     background-repeat: no-repeat;
     background-size: cover;
     padding-top: 245px;
     padding-left: 30px;
-    border-left: 10px solid #fff;
-    border-right: 10px solid #fff;
+    
 }
+
 
 .slider__box-text {
     width: 412px;
@@ -88,7 +92,7 @@ a {
     padding-top: 25px;
     font-size: 12px;
     color: #fff;
-    font-family: Helvetica,sans-serif;
+    font-family: 'Helvetica',sans-serif;
 }
 .slider-nav__item {
     width: 140px;
@@ -107,22 +111,86 @@ a {
     height: 60px;
     background-color: #f0ac9a;
 }
-.slick-next::before {
-    content: url('../images/right.svg');
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    top: -50px;
-    right: 40px;
-    
+.slick-next{
+    right: 50px;
+    top: 170px;
 }
-.slick-prev:before {
-    content: url('../images/left.svg');
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    top: -50px;
-    left: 60px;
-    
+.slick-prev {
+    z-index: 2;
+    top: 170px;
+    left: 20px;
+}
+.slick-arrow::before{
+    display: none;
 }
 
+/*content*/
+
+.content{
+    margin-bottom: 45px;
+}
+.content__inner{
+    display: flex;
+    justify-content: space-between;
+}
+.content__item{
+    width: 290px;
+}
+.content__item-title{
+    padding-bottom: 40px;
+    padding-left: 70px;
+    font-family: 'Bebas', cursive;
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 700;
+    color: #e8663c;
+    position: relative;
+}
+.content__portfolio::before{
+    position: absolute;
+    content: '';
+    width: 50px;
+    height: 50px;
+    background-image: url(../images/content/item-1.svg);
+    background-repeat: no-repeat;
+    left: 0px;
+    top: 0px;
+}
+.content__offer::before{
+    position: absolute;
+    content: '';
+    width: 50px;
+    height: 50px;
+    background-image: url(../images/content/item-2.svg);
+    background-repeat: no-repeat;
+    left: 0px;
+    top: 0px;
+
+}
+.content__follow::before{
+    position: absolute;
+    content: '';
+    width: 50px;
+    height: 50px;
+    background-image: url(../images/content/item-3.svg);
+    background-repeat: no-repeat;
+    left: 0px;
+    top: 0px;
+
+}
+.content__item-text{
+    font-size: 12px;
+    line-height: 18px;
+    font-family: 'Helvetica', sans-serif;
+    margin-bottom: 24px;
+}
+.content__item-btn{
+    font-family: 'Bebas', cursive;
+    font-size: 12px;
+    line-height: 24px;
+    text-transform: uppercase;
+    font-weight: 500;
+    background-color: #e8663c;
+    color: white;
+    padding: 10px 15px;
+}
