--- a/howTo/page/jetro/css/style.css
+++ b/howTo/page/jetro/css/style.css
@@ -21,7 +21,9 @@ a {
 
 /* font-family: 'Bebas Neue', cursive; */
 
-/*Styling header*/
+
+
+/*header*/
 
 
 .header {
@@ -101,15 +103,6 @@ a {
 }
 .slick-slide {
     margin: 5px;    
-}
-.slider::before {
-    content: '';
-    display: block;
-    position: absolute;
-    top: 84px;
-    width: 100%;
-    height: 60px;
-    background-color: #f0ac9a;
 }
 .slick-next{
     right: 50px;
@@ -252,3 +245,51 @@ a {
     font-weight: 600;
     color: #e8663c;
 }
+
+/*footer*/
+
+.footer__inner{
+    background-color: #e8663c;
+    padding: 40px 30px 35px;
+    display: flex;
+    justify-content: space-between;
+}
+.about{
+    width: 270px;
+}
+.twitter{
+    width: 230px;
+}
+.contact{
+    width: 270px;
+}
+.about__title,
+.twitter__title,
+.contact__title{
+    font-family: 'Arial', sans-serif;
+    font-size: 20px;
+    text-transform: uppercase;
+    color: #fff;
+    margin-bottom: 30px;
+}
+.footer p {
+    font-family: 'Arial', sans-serif;
+    font-size: 12px;
+    color: #fff;
+    margin-bottom: 20px;
+}
+.footer span{
+    font-size: 12px;
+    color: #b9b9b9;
+}
+.twitter p{
+    margin-bottom: 10px;
+}
+.twitter__about{
+    display: block;
+    margin-bottom: 20px;
+}
+.contact__social li{
+    display: inline-block;
+}
+
