--- a/howTo/page/bislite/css/media.css
+++ b/howTo/page/bislite/css/media.css
@@ -70,9 +70,6 @@
     .header__drop-down > a.active::after{
         transform: rotate(180deg);
     }
-
-
-
     .items__inner{
         flex-wrap: wrap;
     }
@@ -80,11 +77,61 @@
         width: 50%;
         margin-bottom: 20px;
     }
+    .clients-logo{
+        padding-left: 15px;
+    }
+    .download__btn{
+        padding-left: 15px;
+    }
 } 
 @media (max-width: 900px){
     .item{
         padding-right: 15px;
     }
+    .footer__inner{
+        flex-wrap: wrap;
+    }
+    .footer__item-social{
+        width: 60%;
+        margin-top: 20px;
+    }
+    .footer__copy{
+        margin-right: 15px;
+    }
+}
+@media (max-width: 780px){
+    .clients__inner{
+        flex-wrap: wrap;
+    }
+    .testimonials{
+        max-width: 100%;
+    }
+    .clients-logo{
+        padding-left: 0;
+        margin: 0 auto;
+    }
+}
+@media (max-width: 720px){
+    .footer__item-content{
+        width: 100%;
+        margin-bottom: 20px;
+    }
+}
+@media (max-width: 670px){
+    .download{
+        flex-wrap: wrap;
+    }
+    .download__btn{
+        padding-left: 0;
+        margin: 30px auto 0;
+    }
+    .clients-logo__images {
+        max-width: 100%;
+    }
+    .footer__item-social{
+        width: 100%;
+    }
+
 }
 @media (max-width: 520px){
     .item{
@@ -93,10 +140,31 @@
     }
 }
 @media (max-width: 420px){
+    .footer__item-contact{
+        width: 100%;
+        margin-top: 20px;
+    }
+    .footer__inner{
+        justify-content: flex-start;
+    }
+}
+@media (max-width: 420px){
     .slider__item-title{
         font-size: 40px;
         line-height: 45px;
         margin-left: 20px;
+    }
+    .footer__bottom{
+        flex-wrap: wrap;
+    }
+    .footer__copy{
+        margin-right: 0px;
+        margin-bottom: 20px;
+    }
+}
+@media (max-width: 420px){
+    ul.footer__social li{
+        width: 33.333%;
     }
 }
 
