--- a/howTo/page/moderno/app/scss/_global.scss
+++ b/howTo/page/moderno/app/scss/_global.scss
@@ -19,6 +19,7 @@ li{
 }
 body{
     font-family: 'Roboto-Regular', sans-serif;
+    font-weight: 400;
     font-size: 15px;
     line-height: 24px;
     color: $text;
