--- a/howTo/page/moderno/app/scss/style.scss
+++ b/howTo/page/moderno/app/scss/style.scss
@@ -189,6 +189,7 @@
     &-author{
         display: flex;
         align-items: center;
+        max-width: 245px;
         .span{
             font-size: 14px;
             font-weight: 500;  
@@ -202,6 +203,12 @@
             background-size: cover;
             display: inline-block;
             margin-right: 14px;
+        }
+    }
+    &-star{
+        font-size: 12px;
+        span{
+            color: $bg;
         }
     }
 }
@@ -222,6 +229,37 @@
     }
 }
 
+/*product slider*/
+
+.product-slider{
+    padding: 110px 0px 120px;
+    .slick-dots{
+        text-align: center;
+        margin-top: 50px;
+        li{
+            display: inline-block;
+            margin-left: 3px;
+            margin-right: 3px;
+            &.slick-active{
+                button{
+                    background-color: $green;
+                }
+            }
+            button{
+                border-radius: 50%;
+                background-color: rgb(232, 232, 232);
+                border:none;
+                font-size: 0;
+                width: 16px;
+                height: 16px;
+                cursor: pointer;
+                outline: none;
+            }
+        }
+    }
+}
+
+  
 
 
 
