--- a/howTo/page/moderno/app/scss/style.scss
+++ b/howTo/page/moderno/app/scss/style.scss
@@ -70,13 +70,13 @@
         margin-bottom: 10px;
         font-size: 48px;
         line-height: 72px;
-        font-weight: 700;
+        @include f700;
     }
     &-text{
         margin-bottom: 50px;
         font-size: 20px;
         line-height: 30px;
-        font-weight: 500;
+        @include f500;
     }
     &-form{
         max-width: 670px;
@@ -91,12 +91,12 @@
             height: 56px;
             border: none;
             font-size: 14px;
-            font-weight: 500;
+            @include f500;
             padding-left: 50px;
             padding-right: 60px;
             &::placeholder{
                 color: #90a4ae;
-                font-weight: 500;
+                @include f500;
 
             }
         }
@@ -158,7 +158,7 @@
         padding: 10px 30px;
         min-height: 90px;
         align-items: center;
-        font-weight: 500;
+        @include f500;
         border-bottom: 1px solid #e7ecf2 ;
     }
     &-name{
@@ -177,7 +177,7 @@
     &-price{
         font-size: 20px;
         color: $bg;
-        font-weight: 700;
+        @include f700;
     }
     &-info{
         display: flex;
@@ -192,7 +192,7 @@
         max-width: 245px;
         .span{
             font-size: 14px;
-            font-weight: 500;  
+            @include f500; 
         }
         .avatar{
             width: 30px;
