--- a/howTo/page/moderno/app/scss/style.scss
+++ b/howTo/page/moderno/app/scss/style.scss
@@ -415,6 +415,7 @@
 }
 .footer__coll{
     max-width: 270px;
+    width: 100%;
     &-title{
         font-size: 22px;
         color: #fff;
@@ -501,6 +502,43 @@
 }
 .link-linkedink{
     background-position: -56px -0;
+}
+.footer__form{
+    position: relative;
+    input{
+        border: none;
+        background-color: #2f3c43;
+        display: block;
+        width: 100%;
+        height: 40px;
+        font-size: 14px;
+        color: #fff;
+        padding-left: 13px;
+        padding-right: 50px;
+        &::placeholder{
+            color: #697378;
+        }
+    }
+    button{
+        position: absolute;
+        top: 0;
+        right: 0;
+        background-color: $green;
+        border: none;
+        height: 40px;
+        width: 43px;
+        cursor: pointer;
+        &::before{
+            font-family: 'icomoon';
+            content: '\f124';
+            position: absolute;
+            font-size: 20px;
+            color: #fff;
+            top: 11px;
+            left: 13px;
+
+        }
+    }   
 }
 
   
