--- a/howTo/page/moderno/app/scss/_global.scss
+++ b/howTo/page/moderno/app/scss/_global.scss
@@ -34,6 +34,19 @@ body{
     margin: 0px auto;
     padding: 0 30px;
 }
+.angle-right{
+    position: relative;
+    padding-left: 15px;
+    &::before{
+        content: '\f105';
+        font-family: 'icomoon';
+        position: absolute;
+        left:0;
+        color: $green;
+        font-size: 14px;
+    }
+
+}
 
 @media(max-width: 720px){
     .container-fluid{
