--- a/howTo/page/moderno/app/scss/style.scss
+++ b/howTo/page/moderno/app/scss/style.scss
@@ -29,7 +29,17 @@
 .header__btn-login{
     background-color: $green;
 }
-.header__btn-register{
+.header__btn-login--off{
+    display: none;
+}
+.header__btn-logout{
+    display: none;
+    &.header__btn-login--on{
+        display: block;
+    }
+}
+.header__btn-register,
+.header__btn-logout{
     background-color: $red;
     margin-left: 7px;
 }
@@ -67,9 +77,6 @@
         font-size: 14px;
         color: #a0a0a0;
     }
-    & + .header__circle{
-        margin-left: 15px;
-    }
     span{
         position: absolute;
         width: 18px;
@@ -82,6 +89,10 @@
         font-size: 11px;
         color: #fff;
     }
+}
+.header__box{
+    display: flex;
+    align-items: center;
 }
 .notification{
     span{
@@ -135,7 +146,112 @@
         color: $green;
         @include f700;
     }
-
+}
+.user__menu{
+    border: 0px solid rgb(204, 204, 204);
+    position: absolute;
+    background-color: #fff;
+    padding:0 20px;
+    width: 158px;
+    top: 69px;
+    left: 20px;
+    transition: all .3s;
+    height: 0px;
+    overflow: hidden;
+    a{
+        font-size: 12px;
+        color: #546e7a;
+        margin-bottom: 15px;
+    }
+}
+.basket__box,
+.user__box{
+    position: relative;
+    height: 90px;
+    margin-top: 40px;
+    &:hover{
+        .user__menu{
+            height: auto;
+            border-width: 1px;
+            padding: 20px;
+            overflow: auto;
+        }
+    }
+}
+.basket__menu{
+    position: absolute;
+    top: 62px;
+    right: 0;
+    overflow: hidden;
+    height: 0;
+    border-top: 1px solid #e0e0e0;
+    transition: all .3s;
+}
+.basket__box{
+    margin-top: 54px;
+    margin-left: 15px;
+    &:hover{
+        .basket__menu{
+            overflow: auto;
+            height: auto;
+    
+        }
+    }
+}
+.basket__item{
+    background-color: #fff;
+    padding: 23px;
+    border: 1px solid #e0e0e0;
+    border-top: none;
+    display: flex;
+    align-items: center;
+    width: 269px;
+}
+.basket__images{
+    margin-right: 15px;
+}
+.basket__info-name{
+    @include f500;
+    color: $bg;
+}
+.basket__info-thema{
+    font-size: 12px;
+    color: $green;
+}
+.basket__info-price{
+    @include f500;
+    color: #000;
+    font-size: 16px;
+}
+.basket__summ{
+    background-color: #fff;
+    padding: 16px 17px 12px;
+    border: 1px solid #e0e0e0;
+    border-top: none;
+}
+.basket__title{
+    display: flex;
+    justify-content: space-between;
+    padding-left: 13px;
+    padding-right: 22px;
+    margin-bottom: 15px;
+    @include f700;
+    font-size: 16px;
+    color: $bg;
+}
+.basket__btn{
+    color: #fff;
+    @include f700;
+    font-size: 14px;
+    padding: 12px 5px;
+    background-color: $green;
+    text-align: center;
+    width: 100px;
+}
+.basket__btn-checkout{
+    width: 123px;
+    margin-left: 5px;
+    background-color: $red;
 }
 
 /*search*/
