--- a/howTo/page/moderno/app/scss/style.scss
+++ b/howTo/page/moderno/app/scss/style.scss
@@ -165,7 +165,9 @@
     }
 }
 .basket__box,
-.user__box{
+.user__box,
+.notification__box,
+.message__box{
     position: relative;
     height: 90px;
     margin-top: 40px;
@@ -178,7 +180,7 @@
         }
     }
 }
-.basket__menu{
+.circle__menu{
     position: absolute;
     top: 62px;
     right: 0;
@@ -187,18 +189,20 @@
     border-top: 1px solid #e0e0e0;
     transition: all .3s;
 }
-.basket__box{
+.basket__box,
+.notification__box,
+.message__box{
     margin-top: 54px;
     margin-left: 15px;
     &:hover{
-        .basket__menu{
+        .circle__menu{
             overflow: auto;
             height: auto;
     
         }
     }
 }
-.basket__item{
+.circle__item{
     background-color: #fff;
     padding: 23px;
     border: 1px solid #e0e0e0;
@@ -207,21 +211,25 @@
     align-items: center;
     width: 269px;
 }
-.basket__images{
+.circle__images{
     margin-right: 15px;
 }
-.basket__info-name{
+.circle__info-name{
     @include f500;
     color: $bg;
 }
-.basket__info-thema{
+.circle__info-thema{
     font-size: 12px;
     color: $green;
 }
-.basket__info-price{
+.circle__info-price{
     @include f500;
     color: #000;
     font-size: 16px;
+}
+.circle__info-date{
+    font-size: 10px;
+    color: #707070;
 }
 .basket__summ{
     background-color: #fff;
