--- a/howTo/page/moderno/app/scss/_fonts.scss
+++ b/howTo/page/moderno/app/scss/_fonts.scss
@@ -129,6 +129,12 @@
   .icon-angle-down:before {
     content: "\f107";
   }
+  .icon-mail-reply:before {
+    content: "\f112";
+  }
+  .icon-reply:before {
+    content: "\f112";
+  }
   .icon-meh-o:before {
     content: "\f11a";
   }
@@ -159,4 +165,3 @@
   .icon-pinterest-p:before {
     content: "\f231";
   }
-  
