--- a/howTo/page/moderno/app/scss/style.scss
+++ b/howTo/page/moderno/app/scss/style.scss
@@ -188,6 +188,7 @@
     height: 0;
     border-top: 1px solid #e0e0e0;
     transition: all .3s;
+    z-index: 1;
 }
 .basket__box,
 .notification__box,
@@ -281,6 +282,10 @@
     width: 123px;
     margin-left: 5px;
     background-color: $red;
+}
+.header__btn-menu,
+.menu__btn{
+    display: none;
 }
 
 /*search*/
@@ -627,6 +632,7 @@
 
 .footer{
     background-color: $bg;
+    margin-bottom: -5px;
     &__inner{
         padding: 100px 0px 80px;
         display: flex;
@@ -769,5 +775,17 @@
         }
     }   
 }
+
+
+
+
+
+
+
+
+
+
+
+@import '_media';
 
   
