adaptive header and footer

--- a/howTo/page/moderno/app/scss/style.scss
+++ b/howTo/page/moderno/app/scss/style.scss
@@ -105,12 +105,13 @@
     }
 }
 .basket{
+    margin-right: 20px;
     span{
         background-color: $green;
     }
 }
 .user{
-    margin-left: 20px;
+    
     margin-right: 25px;
     padding-right: 20px;
     position: relative;
