--- a/howTo/page/moderno/app/scss/_media.scss
+++ b/howTo/page/moderno/app/scss/_media.scss
@@ -27,6 +27,28 @@
 @media (max-width: 840px){
     .menu__list{
         display: none;
+        background-color: $bg;
+        position: absolute;
+        top: 150px;
+        left: 0;
+        right: 0;
+        z-index: 1;
+        padding-bottom: 30px;
+        a{
+            display: block;
+            padding: 10px 0;
+            border-bottom: solid 1px #fff;
+        }
+        li{
+            display: block;
+            text-align: center;
+            & + li {
+                margin-left: 0;
+            }
+            &:first-child{
+                border-top: 1px solid #fff;
+            }
+        }
     }
     .menu__btn{
         display: block;
@@ -46,6 +68,9 @@
     .message__box{
         display: none;
     }
+    .circle__menu{
+        right: auto;
+    }
 }
 @media (max-width: 540px){
     .footer__coll{
@@ -59,6 +84,12 @@
      }
 }
 @media (max-width: 520px){
+    .menu__list{
+        top: 70px;
+    }
+    body{
+        overflow-X: hidden;
+    }
     .header__btn-menu{
         display: block;
         width: 70px;
@@ -67,6 +98,7 @@
         position: absolute;
         right: 0;
         top: 0;
+        z-index: 4;
         &::before{
             position: absolute;
             top: 50%;
@@ -78,9 +110,15 @@
     }
     .header__box{
         transition: all .5s;
-        transform: translateX(100%);
+        position:absolute;
+        background-color: #fff;
+        height: 70px;
+        left: 100%;
+        right: -100%;
+        z-index: 2;
         &.active{
-            transform: translateX(0);
+            right: 90px;
+            left: 70px;
         }
     }
     .header__logo{
@@ -96,10 +134,52 @@
     .header__top-inner{
         height: 70px;
     }
+    .circle__menu{
+        top: 52px;
+    }
+    .user__menu{
+        top: 59px;
+    }
+}
+@media (max-width: 495px){
+    .user__info{
+        display: none;   
+    }
+    .user__images{
+        margin-right: 0;
+    }
+}
+@media(max-width: 390px){
+    .header__box{
+        &.active{
+            left: 47px;
+        }
+    }
+    .basket__box{
+        margin-left: 0;
+    }
+    .menu__btn{
+        left: 10px;
+    }
+}
+@media(max-width: 360px){
+    .user{
+        margin-right: 0;
+    }
+    .basket{
+        margin-right: 10px;
+    }
+    .header__logo{
+        margin-left: 50px;
+    }
+    .circle__menu{
+        left: -20px;
+    }
 }
 
 @media (min-width: 841px){
     .menu__list{
         display: block !important;
     }
+    
 }
